--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "Virendra",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   }
 }
